# Falcor

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build_vs2022.bat  build_vs2022.ps1  dependencies.xml  environment.yml  setup_vs2022.bat
Source/Niagara/: CMakeLists.txt  Niagara.cpp  Niagara.h  NiagaraConfig.h  NiagaraScene.cpp  NiagaraScene.h
Source/Niagara/niagara/: extern.cpp  niagara.cpp  niagara.h  scene.h  scenecache.cpp  scenert.cpp
Source/Niagara/shaders/: NiagaraMeshlet.ms.slang
Source/RenderPasses/MeshletCulling/: CMakeLists.txt  MeshCulling.py  MeshletCulling.cpp  MeshletCulling.cs.slang  MeshletCulling.h  MeshletRaster.slang  MeshletTypes.slang  MeshletVBufferVisualize.cs.slang
Source/RenderPasses/SceneDebugger/: CMakeLists.txt  SceneDebugger.cpp  SceneDebugger.cs.slang  SceneDebugger.h  SharedTypes.slang
Source/RenderPasses/VBufferMeshletRaster/: CMakeLists.txt
Source/Samples/: CMakeLists.txt
Source/Samples/CudaInterop/: CopySurface.h  CudaInterop.cpp  CudaInterop.h
Source/Samples/Desktop/D3D12Bundles/: CMakeLists.txt  D3D12Bundles.cpp  D3D12Bundles.h  MeshAlt.slang  MeshSimple.slang
Source/Samples/Desktop/D3D12DynamicLOD/: CMakeLists.txt  D3D12DynamicLOD.cpp  D3D12DynamicLOD.h  Shared.h  Span.h
Source/Samples/Desktop/D3D12ExecuteIndirect/: BuildArgs.slang  CMakeLists.txt  Compute.slang  D3D12ExecuteIndirect.cpp  D3D12ExecuteIndirect.h  Shaders.slang  ShadersCulling.slang
Source/Samples/Desktop/D3D12HDR/: CMakeLists.txt  Color.slang  D3D12HDR.cpp  D3D12HDR.h  Gradient.slang  Palette2020.slang  Palette709.slang  Present.slang
Source/Samples/Desktop/D3D12HelloBundles/: CMakeLists.txt  D3D12HelloBundles.cpp  D3D12HelloBundles.h  HelloBundles.slang
Source/Samples/Desktop/D3D12HelloConstantBuffers/: CMakeLists.txt  D3D12HelloConstantBuffers.cpp  D3D12HelloConstantBuffers.h
Source/Samples/Desktop/D3D12HelloFrameBuffering/: CMakeLists.txt  D3D12HelloFrameBuffering.cpp  D3D12HelloFrameBuffering.h  HelloFrameBuffering.slang
Source/Samples/Desktop/D3D12HelloTexture/: CMakeLists.txt  D3D12HelloTexture.cpp  D3D12HelloTexture.h
Source/Samples/Desktop/D3D12HelloTriangle/: CMakeLists.txt  D3D12HelloTriangle.cpp  D3D12HelloTriangle.h
Source/Samples/Desktop/D3D12HelloWorld/: CMakeLists.txt  D3D12HelloWorld.cpp  D3D12HelloWorld.h
Source/Samples/Desktop/D3D12HelloWorld/HelloBundles/: CMakeLists.txt  D3D12HelloBundles.cpp  D3D12HelloBundles.h
Source/Samples/Desktop/D3D12HelloWorld/HelloConstantBuffers/: CMakeLists.txt  D3D12HelloConstantBuffers.cpp  D3D12HelloConstantBuffers.h  HelloConstantBuffers.slang
Source/Samples/Desktop/D3D12HelloWorld/HelloTexture/: CMakeLists.txt  D3D12HelloTexture.cpp  D3D12HelloTexture.h  HelloTexture.slang
Source/Samples/Desktop/D3D12HelloWorld/HelloTriangle/: CMakeLists.txt  D3D12HelloTriangle.cpp  (+2 more)
Source/Samples/Desktop/D3D12MeshShaders/: CMakeLists.txt
Source/Samples/Desktop/D3D12MeshletInstancing/: CMakeLists.txt  D3D12MeshletInstancing.cpp  D3D12MeshletInstancing.h  MeshletInstancingBunny.ms.slang  MeshletModel.cpp  MeshletModel.h
Source/Samples/Desktop/D3D12PipelineStateCache/: CMakeLists.txt  Cube.slang  D3D12PipelineStateCache.cpp  D3D12PipelineStateCache.h  PostEffect.slang
Source/Samples/Desktop/D3D12Raytracing/: CMakeLists.txt
Source/Samples/Desktop/MeshletCull/: CMakeLists.txt  MeshletCull.cpp  MeshletCull.h  MeshletCull.slang  MeshletCullBunny.slang
Source/Samples/Desktop/MeshletRender/: CMakeLists.txt  MeshletRender.cpp  MeshletRender.h  MeshletRender.slang  Model.cpp  Model.h
Source/Samples/HelloDXR/: CMakeLists.txt  HelloDXR.3d.slang  HelloDXR.cpp  HelloDXR.h  HelloDXR.rt.slang
Source/Samples/MultiSampling/: CMakeLists.txt  MultiSampling.3d.slang  MultiSampling.cpp  MultiSampling.h
Source/Samples/SampleAppTemplate/: SampleAppTemplate.cpp  SampleAppTemplate.h
Source/Samples/ShaderToy/: CMakeLists.txt  ShaderToy.cpp  ShaderToy.h  Toy.ps.slang
Source/Samples/Visualization2D/: CMakeLists.txt  Visualization2D.cpp  Visualization2D.h  Visualization2d.ps.slang  VoxelNormals.ps.slang
(+1481 files in other folders)
