# add_subdirectory(CudaInterop)
add_subdirectory(HelloDXR)
add_subdirectory(MultiSampling)
add_subdirectory(ShaderToy)
add_subdirectory(Visualization2D)
# add_subdirectory(Desktop/D3D12DynamicLOD)
# add_subdirectory(Desktop/D3D12MeshletInstancing)
# add_subdirectory(Desktop/MeshletCull)
# add_subdirectory(Desktop/MeshletRender)
# add_subdirectory(Desktop/D3D12PipelineStateCache)
# add_subdirectory(Desktop/D3D12ExecuteIndirect)
# add_subdirectory(Desktop/D3D12Bundles)
add_subdirectory(Desktop/D3D12HelloFrameBuffering)
add_subdirectory(Desktop/D3D12HelloConstantBuffers)
add_subdirectory(Desktop/D3D12HelloBundles)
add_subdirectory(Desktop/D3D12HelloTexture)
add_subdirectory(Desktop/D3D12HelloTriangle)
add_subdirectory(Desktop/D3D12HelloWorld)