# add_subdirectory(CudaInterop)
add_subdirectory(HelloDXR)
add_subdirectory(MultiSampling)
add_subdirectory(ShaderToy)
add_subdirectory(Visualization2D)
# Mirror DirectX-Graphics-Samples Samples/Desktop structure
# add_subdirectory(Desktop/D3D12DynamicLOD)
add_subdirectory(Desktop/D3D12HelloWorld)
add_subdirectory(Desktop/D3D12MeshShaders)
# add_subdirectory(Desktop/D3D12PipelineStateCache)
add_subdirectory(Desktop/D3D12ExecuteIndirect)
add_subdirectory(Desktop/D3D12HDR)
add_subdirectory(Desktop/D3D12Raytracing)